# acc-engineer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
client/src/: app.cpp  app.h  logic.cpp  logic.h  main.cpp
client/src/common/: defines.h
client/src/logic/: logic.cpp  logic.h
client/src/ui/: connect.cpp  connect.h  driver_input.cpp  driver_input.h  main_window.cpp  strategy.cpp  strategy.h  telemetry.cpp  telemetry.h  telemetry_tyre.cpp  telemetry_tyre.h
client/src/ui/component/: setter_button.cpp  setter_button.h  setter_spin_box.cpp  setter_spin_box.h
client/ui/: connect.ui  driver_input.ui  main_window.ui  strategy.ui  telemetry.ui  telemetry_tyre.ui
proto/: rpc.proto  service.proto  struct.proto
server/: CMakeLists.txt  CMakeSettings.json
server/src/: main.cpp
server/src/service/: service.cpp  service.h  session.h
src/: main.cpp
src/common/: defines.h
src/rpc/rpc/: batch_task.h  error_code.h  method.h  stub.h
src/rpc/rpc/detail/: batch_task.cpp  batch_task.h  packet_handler.h  stub.h
src/shared_memory/: defines.h  emitter.h  reader.cpp  reader.h  shared_memory.cpp  shared_memory.h
src/shared_memory/shared_memory/: car_spec.h  defines.h  emitter.h  reader.cpp  reader.h  tools.h
src/strategy_setter/: strategy_setter.cpp  strategy_setter.h
src/strategy_setter/strategy_setter/: strategy_setter.cpp  strategy_setter.h
src/ui/: driver_input.cpp  driver_input.h  gas_chart.cpp  gas_chart.h  gas_throttle_chart.cpp  gas_throttle_chart.h  main_window.h  shared_memory_emitter.cpp  shared_memory_emitter.h
test/: test_batch_task.cpp  test_client.cpp  test_direct_input.cpp  test_high_precision_sleep.cpp
ui/: driver_input.ui  driverinput.ui  mainwindow.ui
